Squashed commit of the following:
commit 0075c92044ef27fc90e59bc93c2d81ecb208f8c8
Merge: 3428129 a987e4f
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Wed Oct 9 23:14:38 2024 -0600

    Merge branch 'Xavier' into devCore

commit a987e4f4886f76bfa2a41f77e68afc87c01a8c4e
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Wed Oct 9 23:14:06 2024 -0600

    Refinamientos

commit 3428129d0e40e769fe2b515c859749b84dbf6ed9
Merge: fb4719e 40b6065
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Wed Oct 9 16:20:45 2024 -0600

    Merge pull request #89 from XGuadamuz/hotfix/editar-Empleado

    Arreglo a editar empleado

commit 40b6065b7d21eba504349a09f45e4707c84c3b46
Author: gerarmoca2210 <gerarmoca@gmail.com>
Date:   Wed Oct 9 16:20:13 2024 -0600

    Arreglo a editar empleado

commit fb4719ea603dcd8a5351037fde27148ceb708868
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Tue Oct 8 23:26:53 2024 -0600

    Validacion Iniciar Sesion

commit d15fdc1be5ae4176ab6ecf1776072dbe3eb9a206
Merge: 0235418 f462ef3
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Tue Oct 8 21:43:57 2024 -0600

    Merge pull request #88 from XGuadamuz/Gerardo

    Se agrega modal para manegar estado de usuario

commit f462ef33601c6b35f8f5593bb0785637dfec0596
Merge: bc03d25 0235418
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Tue Oct 8 21:43:43 2024 -0600

    Merge branch 'devCore' into Gerardo

commit bc03d2541cc9a2decd26da45d831f684d962967c
Author: gerarmoca2210 <gerarmoca@gmail.com>
Date:   Tue Oct 8 21:41:40 2024 -0600

    Se agregar el Agregar y el Editar a empleados

commit dfb551558c71e444136c56c2b9c566fdd22c166a
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Tue Oct 8 20:35:36 2024 -0600

    Update de Empleados

commit 0235418717b672142451c1496fad3cb28ef51354
Author: LeonardoCZZ <leocorzum@gmail.com>
Date:   Tue Oct 8 19:26:25 2024 -0600

    Actualización 

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/EliminarProveedor.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/EliminarProveedor.cshtml
@@ -1,59 +1,23 @@
-﻿
+﻿@model ProyectoSGIOCore.Models.Proveedor
 @{
-    ViewBag.Title = "EliminarProveedor";
+    ViewBag.Title = "Eliminar Proveedor";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container mt-5">
     <h2 class="text-center mb-4">Eliminar Proveedor</h2>
 
-    <!-- Tabla de Proveedores -->
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Nombre del Proveedor</th>
-                <th>Correo Electrónico</th>
-                <th>Número de Teléfono</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Proveedor ABC</td>
-                <td>abc@proveedor.com</td>
-                <td>1234567890</td>
-                <td>
-                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#eliminarProveedorModal">Eliminar</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Proveedor XYZ</td>
-                <td>xyz@proveedor.com</td>
-                <td>0987654321</td>
-                <td>
-                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#eliminarProveedorModal">Eliminar</button>
-                </td>
-            </tr>
-            <!-- Más proveedores -->
-        </tbody>
-    </table>
-</div>
-
-<!-- Modal de Confirmación de Eliminación -->
-<div class="modal fade" id="eliminarProveedorModal" tabindex="-1" aria-labelledby="eliminarProveedorLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="eliminarProveedorLabel">Confirmar Eliminación</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>¿Estás seguro de que deseas eliminar este proveedor? Esta acción no se puede deshacer.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-danger">Eliminar</button>
-            </div>
-        </div>
+    <div class="alert alert-warning text-center mx-auto">
+        <p>¿Estás seguro de que deseas eliminar el proveedor @Model.Nombre? Esta acción no se puede deshacer.</p>
     </div>
+
+    <form asp-action="EliminarProveedorConfirmado" asp-controller="Proveedores" method="post">
+        <input type="hidden" name="id" value="@Model.IdProveedor" />
+        @Html.AntiForgeryToken()
+
+        <div class="text-center">
+            <button type="submit" class="btn btn-danger">Confirmar Eliminación</button>
+            <a asp-action="VisualizarProveedores" class="btn btn-secondary">Cancelar</a>
+        </div>
+    </form>
 </div>
