--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims;
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="~/css/styles.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -22,55 +24,111 @@
                     <!-- Menú centralizado -->
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Cotización</a>
-                        </li>
-                        <!-- Dropdown Módulos -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Módulos
-                            </a>
-
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Planificación</a></li>
-                                <li><a class="dropdown-item" href="#">Gestión de RH</a></li>
-                                <li><a class="dropdown-item" href="#">Maquinaria</a></li>
-                                <li><a class="dropdown-item" href="#">Inventario</a></li>
-                                <li><a class="dropdown-item" href="#">Contabilidad</a></li>
-                            </ul>
+                            <a class="nav-link" aria-current="page" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos previos</a>
-                        </li>
+                        @if (User.IsInRole("Administrador") || User.IsInRole("Supervisor"))
+                        {
+                            <!-- Dropdown Módulos -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Módulos
+                                </a>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Acerca de nosotros</a>
-                        </li>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Planificación</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Gestión de RH</a></li>
+                                    <li><a class="dropdown-item" href="#">Maquinaria</a></li>
+                                    <li><a class="dropdown-item" href="#">Inventario</a></li>
+                                    <li><a class="dropdown-item" href="#">Contabilidad</a></li>
+                                </ul>
+                            </li>
+                        }                        
+                        
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Administrativo" asp-action="VisualizarUsuarios">Gestión de Usuarios</a>
+                            </li>
+                        }
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Proveedores" asp-action="VisualizarProveedores">Gestión de Proveedores</a>
+                            </li>
+                        }
+
+                        @if (User.IsInRole("Empleado"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Módulo Empleado
+                                </a>
+
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Empleado 01</a></li>
+                                    <li><a class="dropdown-item" href="#">Empleado 02</a></li>
+                                    <li><a class="dropdown-item" href="#">Empleado 03</a></li>
+                                </ul>
+                            </li>
+                        }
+
+                        @if (User.IsInRole("Usuario"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Cotización</a>
+                            </li>
+
+                        }
+
+                        @if (!User.Identity.IsAuthenticated ||
+                        !(User.IsInRole("Administrador") || User.IsInRole("Supervisor") || User.IsInRole("Empleado")))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Proyectos previos</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Acerca de nosotros</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contacto</a>
+                            </li>
+                        }
+
+
 
                     </ul>
                     <!-- Dropdown del Perfil e Iniciar Sesión a la derecha -->
                     <ul class="navbar-nav mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Perfil
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#">Ver Perfil</a></li>
-                                <li><a class="dropdown-item" href="#">Configuración</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Iniciar sesión</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <!-- Mostrar el nombre del usuario si está autenticado -->
+                            <li class="nav-item dropdown d-flex align-items-center">
+
+                                <!-- Nombre del usuario -->
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    @User.Claims.Where(c => c.Type == ClaimTypes.Name).Select(c => c.Value).SingleOrDefault()
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="VerPerfil">Ver Perfil</a></li>
+                                    <li><a class="dropdown-item" href="#">Configuración</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="CerrarSesion">Cerrar sesión</a></li>
+                                </ul>
+                                <!-- Imagen de perfil circular -->
+                                <img src="https://dummyimage.com/40x40/343a40/ffffff&text=P" alt="Foto de perfil" class="rounded-circle me-2" style="width: 30px; height: 30px; object-fit: cover;">
+                            </li>
+                        }
+                        else
+                        {
+                            <!-- Mostrar el enlace de Iniciar Sesión si no está autenticado -->
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Acceso" asp-action="IniciarSesion">Iniciar Sesión</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -122,6 +180,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
     <script src="~/js/funciones.js"></script>
+    @RenderSection("scripts", required: false)
+
 </body>
 </html>
