--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Empleado/EditarEmpleado.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Empleado/EditarEmpleado.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProyectoSGIOCore.Models.Empleado
 @{
-    ViewBag.Title = "Crear Empleado";
+    ViewBag.Title = "Editar Empleado";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
