Descargar lista proveedores

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/VisualizarProveedores.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/VisualizarProveedores.cshtml
@@ -9,6 +9,8 @@
 
     <div class="text-end mb-3">
         <a href="~/Proveedores/RegistroProveedor" class="btn btn-primary">Registrar nuevo proveedor</a>
+        <a href="~/Proveedores/DescargarProveedoresHTML" class="btn btn-danger">Exportar a HTML</a>
+        <a href="~/Proveedores/DescargarProveedoresCSV" class="btn btn-success">Exportar a CSV</a>
     </div>
 
     <div class="table-responsive">
