Visualizar y registrar facturas proveedores

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                                     <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Gestión de RH</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                     <li><a class="dropdown-item" href="#">Inventario</a></li>
-                                    <li><a class="dropdown-item" href="#">Contabilidad</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Facturas" asp-action="VisualizarFacturas">Contabilidad</a></li>
                                 </ul>
                             </li>
                         }                        
