--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarFacturas.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarFacturas.cshtml
@@ -10,6 +10,7 @@
 
     <div class="text-end mb-3">
         <a href="~/Facturas/RegistroFactura" class="btn btn-primary">Registrar Nueva Factura</a>
+        <a asp-action="DescargarFacturasHTML" class="btn btn-danger">Descargar HTML</a>
     </div>
 
     <div class="table-responsive">
