--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/IniciarSesion.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/IniciarSesion.cshtml
@@ -23,6 +23,7 @@
     </label>
 
     <button type="submit" class="submit">Iniciar Sesion</button>
+    <p class="signin">¿Olvidaste tu contraseña? <a asp-controller="Acceso" asp-action="RecuperarCuenta">Recuperar Contraseña</a></p>
     <p class="signin">¿No tiene una cuenta? <a asp-controller="Acceso" asp-action="Registro">Crear Cuenta</a></p>
 </form>
 
