Se agrega autenticacion de 2 factores

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -115,6 +115,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="VerPerfil">Ver Perfil</a></li>
                                     <li><a class="dropdown-item" href="#">Configuración</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="ActivarTwoFA">Autenticación de 2 Factores</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="CerrarSesion">Cerrar sesión</a></li>
                                 </ul>
