--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -36,28 +36,29 @@
                                 </a>
 
                                 <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="Facturas" asp-action="VisualizarFacturas">Contabilidad</a></li>
                                     <li><a class="dropdown-item" href="#">Planificación</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Gestión de RH</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
-                                    <li><a class="dropdown-item" href="#">Inventario</a></li>
-                                    <li><a class="dropdown-item" href="#">Contabilidad</a></li>
                                 </ul>
                             </li>
                         }                        
                         
                         @if (User.IsInRole("Administrador"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Administrativo" asp-action="VisualizarUsuarios">Gestión de Usuarios</a>
-                            </li>
-                        }
+                            <!-- Dropdown Módulos -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Gestión
+                                </a>
 
-                        @if (User.IsInRole("Administrador"))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Proveedores" asp-action="VisualizarProveedores">Gestión de Proveedores</a>
-                            </li>
-                        }
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="Administrativo" asp-action="VisualizarUsuarios">Usuarios</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Recursos Humanos</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Inventario" asp-action="VisualizarInventario">Inventario</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Proveedores" asp-action="VisualizarProveedores">Proveedores</a></li>
+                                </ul>
+                            </li>                            
+                        }                        
 
                         @if (User.IsInRole("Empleado"))
                         {
@@ -115,6 +116,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="VerPerfil">Ver Perfil</a></li>
                                     <li><a class="dropdown-item" href="#">Configuración</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Acceso" asp-action="ActivarTwoFA">Autenticación de 2 Factores</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" asp-controller="Acceso" asp-action="CerrarSesion">Cerrar sesión</a></li>
                                 </ul>
