--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -16,7 +16,10 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #0056B3;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/logo.jpg" alt="Logo" style="height: 75px; width: auto;" />
+                </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,8 +44,8 @@
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                 </ul>
                             </li>
-                        }                        
-                        
+                        }
+
                         @if (User.IsInRole("Administrador"))
                         {
                             <!-- Dropdown Módulos -->
@@ -57,8 +60,8 @@
                                     <li><a class="dropdown-item" asp-controller="Inventario" asp-action="VisualizarInventario">Inventario</a></li>
                                     <li><a class="dropdown-item" asp-controller="Proveedores" asp-action="VisualizarProveedores">Proveedores</a></li>
                                 </ul>
-                            </li>                            
-                        }                        
+                            </li>
+                        }
 
                         @if (User.IsInRole("Empleado"))
                         {
