--- a/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/index.css
+++ b/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/index.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
-    color: #000000; /* Color de texto por defecto */
+    color: #000000;
     transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -76,7 +76,7 @@
 
 .card:hover .content .heading,
 .card:hover .content .para {
-    color: #ffffff; /* Cambia el color del texto a blanco en hover */
+    color: #ffffff;
 }
 
 .card:hover {
@@ -84,3 +84,4 @@
     border-color: #0a3cff;
     scale: 1.05;
 }
+
