--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/ListaProyectos.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/ListaProyectos.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Proyectos</h2>
 
-<a asp-action="Crear" class="btn btn-primary">Crear Nuevo Proyecto</a>
+<a asp-action="Crear" asp-controller="Proyecto" class="btn btn-primary">Crear Nuevo Proyecto</a>
 
 <table class="table">
     <thead>
