--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" asp-controller="Facturas" asp-action="VisualizarFacturas">Contabilidad</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Proyecto" asp-action="Index">Planificación</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Proyecto" asp-action="ListaProyectos">Planificación</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                 </ul>
                             </li>
