--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/Crear.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/Crear.cshtml
@@ -6,7 +6,15 @@
 
 <h2>Crear Nuevo Proyecto</h2>
 
-<form asp-action="Crear" method="post">
+@if (TempData["MensajeError"] != null)
+{
+    <div class="alert alert-danger text-center mt-3" role="alert">
+        @TempData["MensajeError"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+<form asp-action="Crear" asp-controller="Proyecto" method="post">
     <div class="form-group">
         <label asp-for="Nombre"></label>
         <input asp-for="Nombre" class="form-control" />
@@ -14,5 +22,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Crear</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+    <a asp-action="ListaProyectos" class="btn btn-secondary">Cancelar</a>
 </form>
