--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/Detalles.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/Detalles.cshtml
@@ -5,6 +5,14 @@
 }
 
 <h2>Detalles del Proyecto: @Model.Nombre</h2>
+@if (TempData["MensajeExito"] != null)
+{
+    <div class="alert alert-success text-center mt-3" role="alert">
+        @TempData["MensajeExito"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+    </div>
+}
 
 <table class="table">
     <thead>
@@ -30,4 +38,4 @@
     </tbody>
 </table>
 
-<a asp-action="Index" class="btn btn-secondary">Volver a Proyectos</a>
+<a asp-action="ListaProyectos" asp-controller="Proyecto" class="btn btn-secondary">Volver a Proyectos</a>
