--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/ListaProyectos.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/ListaProyectos.cshtml
@@ -2,12 +2,21 @@
 
 @{
     ViewData["Title"] = "Lista de Proyectos";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Proyecto/ProyectoLayout.cshtml";
 }
 
 <h2>Proyectos</h2>
 
-<a asp-action="Crear" asp-controller="Proyecto" class="btn btn-primary">Crear Nuevo Proyecto</a>
+@if (TempData["MensajeExito"] != null)
+{
+    <div class="alert alert-success text-center mt-3" role="alert">
+        @TempData["MensajeExito"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+    </div>
+}
+
+<a asp-action="Crear" asp-controller="Proyecto" class="btn btn-primary">Crear Proyecto</a>
 
 <table class="table">
     <thead>
