Cambios en nombres

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Administrativo/CrearUsuario.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Administrativo/CrearUsuario.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProyectoSGIOCore.ViewModels.CrearUsuarioVM
 @{
-    ViewBag.Title = "Crear Usuario";
+    ViewBag.Title = "CrearProyecto Usuario";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var rolesList = ViewBag.Roles as List<ProyectoSGIOCore.Models.Rol>;
 }
