--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -9,12 +9,12 @@
             <div class="position-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" asp-controller="Proyecto" asp-action="ListaProyectos">
+                        <a class="nav-link active" aria-current="page" asp-controller="Proyecto" asp-action="Proyectos">
                             Ver Proyectos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Proyecto" asp-action="Crear">
+                        <a class="nav-link" asp-controller="Proyecto" asp-action="CrearProyecto">
                             Crear Proyecto
                         </a>
                     </li>
