--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -2,10 +2,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid vh-100">
+    <div class="row h-100">
         <!-- Sidebar -->
-        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+        <nav id="sidebar" class="col-lg-2 bg-black">
             <div class="position-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
