--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -2,6 +2,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link href="~/css/menuproyectos.css" rel="stylesheet" />
+
 <div class="container-fluid vh-100">
     <div class="row h-100">
         <!-- Sidebar -->
@@ -29,3 +31,5 @@
         </main>
     </div>
 </div>
+
+<script src="~/js/funciones.js"></script>
