--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/Proyectos.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/Proyectos.cshtml
@@ -18,10 +18,10 @@
 
 <a asp-action="CrearProyecto" asp-controller="Proyecto" class="btn btn-primary">Crear Proyecto</a>
 
-<table class="table">
+<table>
     <thead>
         <tr>
-            <th>Nombre</th>
+            <th>Nombre del Proyecto</th>
             <th>Fecha de Creación</th>
             <th>Acciones</th>
         </tr>
@@ -33,8 +33,7 @@
                 <td>@proyecto.Nombre</td>
                 <td>@proyecto.FechaCreacion.ToShortDateString()</td>
                 <td>
-                    <a asp-action="GestionarProyecto" asp-route-id="@proyecto.Id" class="btn btn-info">Gestionar</a>
-                    <a asp-action="AgregarTareas" asp-route-id="@proyecto.Id" class="btn btn-secondary">Agregar Tareas</a>
+                    <a href="@Url.Action("GestionarProyecto", "Proyecto", new { id = proyecto.Id })">Gestionar</a>
                 </td>
             </tr>
         }
