--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -3,6 +3,7 @@
 }
 
 <link href="~/css/menuproyectos.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <div class="container-fluid vh-100">
     <div class="row h-100">
